--- a/default.css
+++ b/default.css
@@ -39,6 +39,8 @@ h1 {
     font-size: 3.750em;
     line-height: 0.15;
     margin-top: .55em;
+    display: inline-block;
+    width:50%;
     position: relative;
     right: .02em;
     font-kerning: normal;
@@ -94,6 +96,10 @@ a.albumDL:hover, a.albumDL:focus, a.albumDL:active {
     text-decoration: none;
 }
 
+svg {
+    display: block;
+    padding: 0;
+}
 .albumDL {
     
     text-align: justify; width:100%
@@ -105,8 +111,16 @@ a.albumDL:hover, a.albumDL:focus, a.albumDL:active {
     width:450px;
     
 }
+#HeadNav {
+    display: inline-block;
+    width: 100%;
+}
 #socialPanel {
-    height: 38px;
+    width: 92.36%;
+    margin-right: auto;
+    height: 2em;
+    margin-left: auto;
+    display: block;
 }
 .socialIcons {
     padding-right: 0.175em;
@@ -118,11 +132,11 @@ a.albumDL:hover, a.albumDL:focus, a.albumDL:active {
 .socialLinks {
     display: inline-block;
     font-size: 1.875em;
-    letter-spacing: 2px;
-   /* vertical-align: bottom; */
+    letter-spacing: .0668em;
     bottom: 0;
     padding-bottom: 0;
-    /* right:0; */
+    margin-left: 15px;
+    margin-right: 15px;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
     -webkit-transition-duration: 0.05s;
@@ -245,6 +259,20 @@ a.albumDL:hover, a.albumDL:focus, a.albumDL:active {
     display: inline-table;
 }
 
+#cs80 {
+    margin:0; 
+    display:block;
+    width:100%;
+    background-image: url("rsrc/img/CS80.svg");
+    background-repeat: no-repeat;
+    margin:0;
+    /* padding: 0 0 .1em .05em; */
+    overflow: hidden;
+    /* margin-top:2em; */
+    transition: filter .2s cubic-bezier(0.42, 0, 0, 1);
+}
+
+
 
 
 #bandcampPlaylist {filter: contrast(161%) brightness(137%) saturate(93%) hue-rotate(-8deg);}
@@ -255,9 +283,10 @@ a.albumDL:hover, a.albumDL:focus, a.albumDL:active {
 
 #emailMargin {
     margin-top: .5em;
-    display: inline;
-    width:100%;
+    display: block;
     position: relative;
+    width:100%;
+    
     
 }
 
@@ -306,8 +335,8 @@ img#headGraphic {
     -moz-image-rendering: crisp-edges;
          /*image-rendering: pixelated;*/
          image-rendering: optimizeSpeed;
-    border-radius: 0px;
-    -webkit-border-radius: 0px;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
     box-shadow: 0px 0px 40px 7px rgba(193, 2, 37, 0.24);
     -webkit-box-shadow: 0px 0px 40px 7px rgba(193, 2, 37, 0.24);
     transition: all .3s cubic-bezier(0.42, 0, 0, 1);
@@ -319,8 +348,8 @@ img#headGraphic {
 .ShadowMask {
     display: inherit;
     position: relative;
-    border-radius: 0px;
-    -webkit-border-radius: 0px;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
     transition: all .3s cubic-bezier(0.42, 0, 0, 1);
     -webkit-transition: all .3s cubic-bezier(0.42, 0, 0, 1);
             box-shadow: inset 0px 0px 40px 15px rgba(20,0,0,.7);
@@ -329,8 +358,8 @@ img#headGraphic {
 .Halation {
             display: block;
             position: relative;
-            border-radius: 0px;
-    -webkit-border-radius: 0px;
+            border-radius: 30px;
+    -webkit-border-radius: 30px;
     
     transition: all .2s ease-out; /* cubic-bezier(0.42, 0, 0, 1); */
     -webkit-transition: all .2s ease-out; /* cubic-bezier(0.42, 0, 0, 1); */
