--- a/default.css
+++ b/default.css
@@ -32,7 +32,7 @@ body {
     
     background-color: #000000;
     font-family: 'Nanami', 'Helvetica', sans-serif;
-    margin: 0;
+    margin:15px;
 }
 
 h1 {
@@ -107,7 +107,6 @@ svg {
 
 .content {
     
-    margin:15px;
     width:450px;
     
 }
@@ -116,11 +115,13 @@ svg {
     width: 100%;
 }
 #socialPanel {
+    display: block;
     width: 92.36%;
     margin-right: auto;
     height: 2em;
     margin-left: auto;
-    display: block;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .socialIcons {
     padding-right: 0.175em;
