--- a/default.css
+++ b/default.css
@@ -263,6 +263,7 @@ svg {
     margin:0; 
     display:block;
     width:100%;
+    max-height: 4em;
     background-image: url("rsrc/img/CS80.svg");
     background-repeat: no-repeat;
     margin:0;
