--- a/default.css
+++ b/default.css
@@ -301,7 +301,7 @@ svg {
     margin:0; 
     display:block;
     width:100%;
-    max-height: 4em;
+    min-height: 4em;
     background-image: url("rsrc/img/CS80.svg");
     background-repeat: no-repeat;
     margin:0;
