--- a/default.css
+++ b/default.css
@@ -29,7 +29,7 @@ body, a, .reveal {
 }
 
 body {
-    
+    width: 465 px;
     background-color: #000000;
     font-family: 'Nanami', 'Helvetica', sans-serif;
     margin: 0px;
