--- a/default.css
+++ b/default.css
@@ -29,11 +29,10 @@ body, a, .reveal {
 }
 
 body {
-    width: 465 px;
+    width: 465px;
     background-color: #000000;
     font-family: 'Nanami', 'Helvetica', sans-serif;
-    margin: 0px;
-    padding: 15px;
+    margin: 15px;
 }
 
 h1 {
@@ -301,7 +300,7 @@ svg {
     margin:0; 
     display:block;
     width:100%;
-    min-height: 4em;
+    height: 3.9em;
     background-image: url("rsrc/img/CS80.svg");
     background-repeat: no-repeat;
     margin:0;
