--- a/default.css
+++ b/default.css
@@ -438,4 +438,4 @@ a.albumDL {text-shadow: 0px 0px 22px rgba(245, 6, 66, 0.81);}
 
 .hr, .vr {box-shadow: 0px 0px 11px 7px rgba(245,6,66,0.15);}
 
-.album-info, .mailDesc {text-shadow: 0px 0px 14px rgba(245, 6, 66, 0.9);}
+.album-info, .mailListing {text-shadow: 0px 0px 14px rgba(245, 6, 66, 0.9);}
